# linkedin-agent

./: .env.example  .gitignore  CLAUDE.md  GUIDE.md  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
src/agent/: cli.py  config.py  templating.py
src/agent/db/: migrate.py  models.py  session.py
src/agent/linkedin/: browser.py  detection.py  messaging.py  profile.py  search.py
src/agent/llm/: client.py  filter.py  parse_contact.py  personalize.py  prompts.py
src/agent/mailer/: render.py  reply_detector.py  sender.py
src/agent/safety/: audit.py  caps.py  delay.py
templates/: email_followup_1.md  email_followup_2.md  email_outreach.md  email_subject.txt  linkedin_message.md  signature.txt
tests/: test_delay.py  test_followups.py  test_parse_contact.py  test_render.py  test_reply_detector.py
