[project]
name = "linkedin-agent"
version = "0.1.0"
description = "Local LinkedIn outreach agent — Playwright + Ollama + Gmail SMTP, with strict safety caps."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.47",
    "ollama>=0.3.3",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tenacity>=9.0",
    "rich>=13.7",
    "jinja2>=3.1",
    "email-validator>=2.2",
]

[project.optional-dependencies]
agent-fallback = ["browser-use>=0.1.40"]
ui = ["streamlit>=1.38", "pandas>=2.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
